# WebCanvasBScSoftwareDevProj202526

./: .gitignore  README  dashboard-admin.yaml  kubernetes-dashboard.ps1  package-lock.json
Backend/: cargo.toml
Backend/dev-console/: Cargo.toml
Backend/dev-console/benches/: btree.rs  canvasdb.rs  fpram.rs  wal.rs
Backend/dev-console/src/: main.rs
Backend/general/: Cargo.toml
Backend/general/src/: concurrent_file_key_value_store.rs  file_key_value_store.rs  keyed_lock.rs  lib.rs  mock_persistent_random_access_memory.rs  page_cache.rs  page_cache_ARCHIVE.rs  persistent_random_access_memory.rs  persistent_random_access_memory_tests.rs  pram_btree_index.rs  write_ahead_log.rs
Backend/noredb/: Cargo.toml  Dockerfile  buildAndRelease.ps1  kubernetes.noredb.yaml
Backend/noredb/proto/: noredb.proto
Backend/noredb/src/: canvasdb.rs  lib.rs  main.rs  server.rs
Backend/noredb/tests/: canvasdb_tests.rs
Backend/veritas/: Cargo.toml  Dockerfile  buildAndRelease.ps1  kubernetes.veritas.yaml
Backend/veritas-client/: Cargo.toml
Backend/veritas-client/src/: lib.rs  service_registration.rs  veritas_client.rs
Backend/veritas/src/: main.rs  veritas_controller.rs  veritas_controller_OLD.rs
Backend/veritas_data/: veritas_kv_store.1.kv
BackendStatefull/: .dockerignore  Cargo.toml
BackendStatefull/dev-console/: Cargo.toml
BackendStatefull/dev-console/benches/: btree.rs  canvasdb.rs  canvasdb001.txt
BackendStatefull/general/: Cargo.toml
BackendStatefull/general/src/: dns.rs  lib.rs  mock_persistent_random_access_memory_ARCHIVE.rs  persistent_random_access_memory_ARCHIVE.rs  pram_btree_index.rs  thread_pool.rs
BackendStatefull/noredb/: Cargo.toml  build.rs  buildAndRelease.ps1  kubernetes.noredb-loadbalancer.yaml  kubernetes.noredb.yaml
BackendStatefull/noredb/proto/: noredb.proto
BackendStatefull/noredb/src/: canvasdb.rs  main.rs  server.rs
BackendStatefull/noredb/tests/: canvasdb_tests.rs
BackendStatefull/veritas/: Cargo.toml  Dockerfile  kubernetes.veritas.yaml
BackendStatefull/veritas-client/: Cargo.toml  postman.json
BackendStatefull/veritas-client/src/: lib.rs  service_registration.rs  veritas_client.rs
BackendStatefull/veritas-messages/: Cargo.toml
BackendStatefull/veritas-messages/src/: messages.rs
BackendStatefull/veritas/src/: main.rs  veritas_controller.rs
BackendStateless/: go.work  go.work.sum
BackendStateless/WebCanvas/: WebCanvas.slnx  webcanvas.yaml
BackendStateless/WebCanvas/NoredbPartitioningControllerClient/: NoredbPartitioningControllerClient.csproj  PartitioningControllerClient.cs  ServiceCollectionExtensions.cs  partitioning-controller.proto
BackendStateless/general/: go.mod  pixel_hasher.go
BackendStateless/grpc-general/: go.mod
BackendStateless/partitioning-controller/: Dockerfile  buildAndRelease.ps1  go.mod  kubernetes.partitioning-controller.yaml  main.go
BackendStateless/veritas-client/: go.mod  messages.go  service_registration.go  service_registration_test.go  veritas_client.go  veritas_client_test.go
Frontend/staticWebserver/: Dockerfile  nginx.conf
Frontend/webcanvas/: README.md  index.html  package-lock.json  package.json
(+79 files in other folders)
