[package]
name = "dev-console"
version = "0.1.0"
edition = "2024"

[dependencies]
general = { path = "../general"}
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "fpram"
harness = false

[[bench]]
name = "wal"
harness = false
