[package]
name = "veritas"
version = "0.1.0"
edition = "2024"

[dependencies]
threadpool = "1.8.1"
general = { path = "../general"}
tracing = "0.1.41"
actix-web = "4.11.0"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
tokio = "1.48.0"
