[package]
name = "noredb"
version = "0.1.0"
edition = "2024"

[dependencies]
general = { path = "../general" }
veritas-client = { path = "../veritas-client" }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tonic = "*"
tonic-health = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
local-ip-address = "0.6.5"
crossbeam = "0.8.4"
tokio-stream = "0.1.17"
chrono = "0.4.42"
gethostname = "1.1.0"

[build-dependencies]
tonic-prost-build = "*"
