[package]
name = "veritas-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
wiremock = "0.6.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.7"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
veritas-messages = { path = "../veritas-messages" }