[package]
name = "veritas"
version = "0.1.0"
edition = "2024"

[dependencies]
threadpool = "1.8.1"
general = { path = "../general"}
tracing = "0.1.41"
actix-web = "4.11.0"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","json"] }
tokio = "1.48.0"
regex = "1.12.2"
lazy-regex = "3.4.2"
actix-ws = "0.3.0"
serde_json = "1.0.145"
serde = "1.0.228"
veritas-messages = { path = "../veritas-messages" }